deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybank-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mybank
  template:
    metadata:
      labels:
        app: mybank
    spec:
      containers:
        - name: mybank-container
          image: riskihidayat/mybank:latest
          ports:
            - containerPort: 8080
