service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybank-service
spec:
  selector:
    app: mybank
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort  # Ubah ke ClusterIP jika pakai Ingress
